# chat9-sdks

./: CHANGELOG.md  README.md
.github/workflows/: ci.yml  release-python.yml
docs/: compatibility.md  conformance.md  release-process.md  token-spec.md
fixtures/: generate_cases.json  golden_tokens.json  verify_cases.json
go/: README.md
php/: README.md
python/: README.md  pyproject.toml
python/chat9/: __init__.py  errors.py  token.py  validation.py
python/tests/: test_fixtures.py
